kubernetes/actual/ingress.yaml
---
# yaml-language-server: $schema=https://json.schemastore.org/traefik-v3.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: actual
  namespace: traefik
spec:
  routes:
    - match: Host(`budget.axis.scottmckendry.tech`)
      kind: Rule
      middlewares:
        - name: ipallowlist
          namespace: traefik
      services:
        - name: actual
          namespace: actual
          port: 5006
  tls:
    secretName: axis-tls
